--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,29 @@ a {
     display: inline-block;
 }
 
+.butn {
+    padding: 0.5em 0.8em;
+
+    border-radius: 30px;
+    border: transparent;
+    color: white;
+
+}
+
+.butn-blue {
+    background-color: #2D64E6;
+}
+
+.butn-orange {
+    background-color: #CD3D0F;
+}
+
+h1 {
+    font-size: 45px;
+}
+
+
+
 /* style */
 
 /* header */
@@ -19,8 +42,9 @@ header .logo-sony {
 
 header .logo-sony img {
     width: 100px;
-    background-color: black;
     padding: 0.5rem;
+
+    background-color: black;
 }
 
 header .right-nav {
@@ -35,6 +59,16 @@ header a {
 
 .hero {
     margin-top: 114px;
-    height: 500px;
+    padding: 3rem 1rem;
+
     background-image: url(../img/jumbo-bg.png);
+    background-size: cover;
+    background-position: top center;
+    background-repeat: no-repeat;
+}
+
+.hero .hero-banner {
+    width: 300px;
+
+    margin-top: 15rem;
 }
