--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,16 @@ a {
     color: blue;
 }
 
+.butn-black {
+    background-color: #000000;
+    color: white;
+}
+
+.butn-white {
+    background-color: white;
+    color: black;
+}
+
 h1 {
     font-size: 40px;
 }
@@ -69,6 +79,15 @@ header .right-nav {
 
 header a {
     color: black;
+}
+
+.dropdown-toggle::after {
+    content: "\f107";
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    font-size: 10px;
+
+    border: none;
 }
 
 /* hero */
@@ -129,8 +148,27 @@ header a {
 
 /* play plus */
 
-.play-plus .plus-logo {
-    width: 100px;
-    object-fit: contain;
-    display: inline-block;
+.play-plus {
+    background-color: #BEBCBB;
+
+}
+
+.play-plus .play-monthly {
+    background-image: url(../img/ps-plus-april-monthly-games-featured-image-block.png);
+
+    background-size: cover;
+    background-position: center center;
+}
+
+/* play now */
+
+.play-now {
+    background-color: #161C3B;
+}
+
+.play-now .play-monthly {
+    background-image: url(../img/ps-now-april-featured-image-block.png);
+
+    background-size: cover;
+    background-position: center center;
 }
