--- a/css/style.css
+++ b/css/style.css
@@ -172,3 +172,18 @@ header a {
     background-size: cover;
     background-position: center center;
 }
+
+/* social */
+
+@media screen and (min-width: 768px) {
+    .social {
+        padding: 0 5rem;
+    }
+}
+
+
+@media screen and (min-width: 992px) {
+    .social {
+        padding: 0 8rem;
+    }
+}
