--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* reset */
+/* utility */
 
 [class*="col"] {
     /* border: 1px solid black; */
@@ -13,16 +13,28 @@ a {
     padding: 0.5em 0.8em;
 
     border-radius: 30px;
-    border: transparent;
+    border: none;
     color: white;
 }
+
 
 .butn-blue {
     background-color: #2D64E6;
 }
 
+.butn-blue:hover {
+    outline: 2px double #2D64E6;
+    outline-offset: 1px;
+}
+
+
 .butn-orange {
     background-color: #CD3D0F;
+}
+
+.butn-orange:hover {
+    outline: 2px double #CD3D0F;
+    outline-offset: 1px;
 }
 
 .butn-gray {
@@ -30,14 +42,29 @@ a {
     color: blue;
 }
 
+.butn-gray:hover {
+    outline: 2px double blue;
+    outline-offset: 1px;
+}
+
 .butn-black {
     background-color: #000000;
     color: white;
 }
 
+.butn-black:hover {
+    outline: 2px double black;
+    outline-offset: 1px;
+}
+
 .butn-white {
     background-color: white;
     color: black;
+}
+
+.butn-white:hover {
+    outline: 2px double white;
+    outline-offset: 1px;
 }
 
 h1 {
@@ -90,6 +117,40 @@ header a {
     border: none;
 }
 
+.show.dropdown-toggle::after {
+    transform: rotate(180deg);
+}
+
+header .list_style a {
+    display: list-item;
+    list-style-type: disc;
+    list-style-position: inside;
+    margin: 0 1.5rem;
+}
+
+.play-choose li {
+    border: 2px solid transparent;
+    padding: 0 0.8rem;
+    text-align: center;
+}
+
+.play-choose a:hover {
+    background-color: white;
+}
+
+.play-choose li:hover {
+    border: 2px solid gray;
+
+}
+
+header .list_style a:hover {
+    color: blue;
+    background-color: white;
+}
+
+
+
+
 /* hero */
 
 .hero {
@@ -118,13 +179,35 @@ header a {
     border-radius: 15px;
 }
 
+.play-content img {
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.play-content img:hover {
+    transform: translate(0, -10px);
+}
+
+
+
 /* news */
 
 /* console */
 
 .thumbs .col {
     padding: 1rem 2rem;
+    border-bottom: 2px solid transparent;
+    filter: opacity(0.7);
+    cursor: pointer;
 }
+
+.thumbs .col:hover {
+    filter: opacity(1);
+    border-bottom: 2px solid blue;
+
+}
+
+
 
 /* takes two */
 
@@ -144,6 +227,10 @@ header a {
 
 .release {
     background-color: #1F1F1F;
+}
+
+.cards-release {
+    cursor: pointer;
 }
 
 /* play plus */
@@ -174,6 +261,10 @@ header a {
 }
 
 /* social */
+
+.social .col img {
+    cursor: pointer;
+}
 
 @media screen and (min-width: 768px) {
     .social {
