--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ a {
     display: inline-block;
 }
 
+/* buttons reset */
+
 .butn {
     padding: 0.5em 0.8em;
 
@@ -16,7 +18,6 @@ a {
     border: none;
     color: white;
 }
-
 
 .butn-blue {
     background-color: #2D64E6;
@@ -67,6 +68,8 @@ a {
     outline-offset: 1px;
 }
 
+/* h1 h2 p and img reset */
+
 h1 {
     font-size: 40px;
 }
@@ -100,15 +103,23 @@ header .logo-sony img {
     background-color: black;
 }
 
-header .right-nav {
-    list-style: none;
-}
+
 
 header a {
     color: black;
+
 }
 
-.dropdown-toggle::after {
+.navbar-nav>li>a {
+    filter: opacity(0.8);
+}
+
+.navbar-nav>li>a:hover {
+    filter: opacity(1);
+}
+
+
+header .dropdown-toggle::after {
     content: "\f107";
     font-family: "Font Awesome 6 Free";
     font-weight: 900;
@@ -117,7 +128,7 @@ header a {
     border: none;
 }
 
-.show.dropdown-toggle::after {
+header .show.dropdown-toggle::after {
     transform: rotate(180deg);
 }
 
@@ -128,17 +139,21 @@ header .list_style a {
     margin: 0 1.5rem;
 }
 
-.play-choose li {
+header .list_style a::marker {
+    color: blue;
+}
+
+header .play-choose li {
     border: 2px solid transparent;
     padding: 0 0.8rem;
     text-align: center;
 }
 
-.play-choose a:hover {
+header .play-choose a:hover {
     background-color: white;
 }
 
-.play-choose li:hover {
+header .play-choose li:hover {
     border: 2px solid gray;
 
 }
@@ -155,7 +170,6 @@ header .list_style a:hover {
 
 .hero {
     margin-top: 114px;
-    padding: 3rem 1rem;
 
     background-image: url(../img/jumbo-bg.png);
     background-size: cover;
@@ -204,7 +218,13 @@ header .list_style a:hover {
 .thumbs .col:hover {
     filter: opacity(1);
     border-bottom: 2px solid blue;
+}
 
+.thumbs span {
+    font-size: 10px;
+    border: 1px solid black;
+    border-radius: 50%;
+    vertical-align: text-top;
 }
 
 
@@ -215,7 +235,7 @@ header .list_style a:hover {
 
     background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
     background-size: cover;
-    background-position: top center;
+    background-position: top left;
     background-repeat: no-repeat;
 }
 
@@ -227,6 +247,13 @@ header .list_style a:hover {
 
 .release {
     background-color: #1F1F1F;
+}
+
+.release span {
+    font-size: 10px;
+    border: 1px solid white;
+    border-radius: 50%;
+    vertical-align: text-top;
 }
 
 .cards-release {
@@ -245,6 +272,15 @@ header .list_style a:hover {
 
     background-size: cover;
     background-position: center center;
+    background-repeat: no-repeat;
+
+    object-fit: cover;
+}
+
+/* discount */
+
+.discount .cards-discount img {
+    cursor: pointer;
 }
 
 /* play now */
@@ -258,6 +294,7 @@ header .list_style a:hover {
 
     background-size: cover;
     background-position: center center;
+    background-repeat: no-repeat;
 }
 
 /* social */
